added GUI practice instructions

--- a/git_with_commandline.html
+++ b/git_with_commandline.html
@@ -116,7 +116,7 @@ You may receive a security warning about the software being from an unknown publ
 <p>Go to the forked copy of the repository, and grab the code to clone it (if you've set up your SSH key, get the SSH address).</p>
 <img class="screen_shot" alt="screenshot with clone url pointed to" src="images/ghClone.jpg"/>
 
-<p>On your local computer, go to a directory where you don't mind having a practice file.
+<p>On your local computer, go to a directory where you don't mind having a practice file. If you're on a PC, do this within the Git Bash application.
 <div class="example">Mkdir new_folder</div>
 Move into that folder:
 <div class="example">cd new_folder</div>
