--- a/git_with_gui.html
+++ b/git_with_gui.html
@@ -28,7 +28,31 @@
 
 
 		<h2 id="practice">Practice Git</h2>
-<p>Come class time, we'll set you up with an exercise. If you're itching to get started, have a look at some <a href="resources.html">git resources</a>.</p>
+
+<h3>Fork & clone a repository</h3>
+<p>Visit GitHub and fork our repository at <a href="https://github.com/hklish01/gettingtoknowgit">https://github.com/hklish01/gettingtoknowgit</a>. <span class="note">You can of course clone whatever repository you'd like, but for the purpose of this practice, go ahead and fork ours.</span></p>
+<img class="screen_shot" alt="screenshot with fork button pointed to" src="images/ghFork.jpg"/>
+<p>Go to the forked copy of the repository, and hit the "Clone in Desktop" button.
+<img class="screen_shot" alt="screenshot with clone url pointed to" src="images/ghGUIClone.jpg"/>
+<p>Your computer may ask you which application to open this with. Choose the GitHub application</p>.
+<p> The GitHub application will save this repository to your computer - you may choose the location or go with the defaults. The GitHub application will show you any changes you've made (since you've just cloned the repository, you'll see none), and the history from previous commits from before you forked the repository. </p>
+<p>Also - note the branches button. Here there will be two branches - master and gh-pages. For this exercise, use master. The gh-pages branch is the one we used to host this web page you're reading.</p>
+<h3>Make a change to your repository</h3>
+<p>You won't do any work on the actual files within the GitHub application. So navigate, via the finder or "my computer", to the repository. (If you accepted the default location, this could be your computer's default document folder).</p>
+<p>Make a change to a file - Make any of the proposed additions below:
+<ul>
+<li>Add information about banned books to the banned_book.txt file.</li>
+<li>Add a banned book to this same file.</li>
+<li>Add a library name and link to the libraries_info.txt file</li>
+<li>Add a file with a different type of information about banned books (perhaps a list of banned book events?)
+<li>Add and commit your changes, then push them back to your repository on GitHub. Issue a pull request to the original repository. </li>
+</ul>
+
+<h3>Commit your changes</h3>
+<p>Make sure the change(s) you have made to the files in the repository have been saved to your computer. Go back to the GitHub application and you should see the changes you've made. Add a note in the "summary" field and hit the "Commit to master" button. Now when you go to the "History" view you'll see your commit in addition to the first commits we made before you forked the repository. </p>
+<p>To push your changes to your repository on GitHub, hit the sync button (top right side). When you go to GitHub through your browser, you'll now see the changes you made on your local computer</p>
+<h3>What else?</h3>
+<p>You now know some basics of working with git! It'll be easier to learn from here. You may want to practice with branches and merging. See our <a href="resources.html">resources page</a> for further tutorials and help.</p>
 
 </body>
 </html>	
