change image addy

--- a/git_with_gui.html
+++ b/git_with_gui.html
@@ -33,8 +33,8 @@
 <p>Visit GitHub and fork our repository at <a href="https://github.com/hklish01/gettingtoknowgit">https://github.com/hklish01/gettingtoknowgit</a>. <span class="note">You can of course clone whatever repository you'd like, but for the purpose of this practice, go ahead and fork ours.</span></p>
 <img class="screen_shot" alt="screenshot with fork button pointed to" src="images/ghFork.jpg"/>
 <p>Go to the forked copy of the repository, and hit the "Clone in Desktop" button.
-<img class="screen_shot" alt="screenshot with clone url pointed to" src="images/ghGUIClone.jpg"/>
-<p>Your computer may ask you which application to open this with. Choose the GitHub application</p>.
+<img class="screen_shot" alt="screenshot with clone url pointed to" src="images/gitGUIClone.jpg"/>
+<p>Your computer may ask you which application to open this with. Choose the GitHub application.</p>
 <p> The GitHub application will save this repository to your computer - you may choose the location or go with the defaults. The GitHub application will show you any changes you've made (since you've just cloned the repository, you'll see none), and the history from previous commits from before you forked the repository. </p>
 <p>Also - note the branches button. Here there will be two branches - master and gh-pages. For this exercise, use master. The gh-pages branch is the one we used to host this web page you're reading.</p>
 <h3>Make a change to your repository</h3>
