--- a/git_with_commandline.html
+++ b/git_with_commandline.html
@@ -106,7 +106,7 @@ You may receive a security warning about the software being from an unknown publ
            <h4>Paste your key into your GitHub settings</h4>
            <p>The last step in authenticating with GitHub is to log in to GitHub, go to your settings page (to do this, click on your profile picture and select "Settings from the drop down menu"). Once you're on the settings page, click "SSH Keys" on the left-hand menu, then "Add SSH key".</p>  
           
-         <p class="note">Is this step not working well for you? You can another way to authenticate: See <a href="https://help.github.com/articles/caching-your-github-password-in-git/">GitHub instructions for authenticating through https and a credential tool</a>.</p>
+         <p class="note">Is this step not working well for you? You can try another way to authenticate: See <a href="https://help.github.com/articles/caching-your-github-password-in-git/">GitHub instructions for authenticating through https and a credential tool</a>.</p>
 
 <h2 id="practice">Practice Git</h2>
 
