add contact info & make sure Git spelling

--- a/git_with_commandline.html
+++ b/git_with_commandline.html
@@ -72,8 +72,8 @@ You may receive a security warning about the software being from an unknown publ
 
 
         <h3 id="mac">Install Git on a Mac</h3>
-        <p>There's a chance git is already installed on your Mac. Open up a terminal window and run "git". If you get a long list of commands, you're probably ready to go. If the terminal says something about not knowing what you're talking about (you may see something about "no developer tools"), you'll have to install it:</p>
-        <p>Go to the <a href="https://git-scm.com/downloads">git-scm downloads page</a> and download the newest version of git. When you open up the downloaded installer, the program will walk you through the set up, which is a quick process.</p>
+        <p>There's a chance Git is already installed on your Mac. Open up a terminal window and run "git". If you get a long list of commands, you're probably ready to go. If the terminal says something about not knowing what you're talking about (you may see something about "no developer tools"), you'll have to install it:</p>
+        <p>Go to the <a href="https://git-scm.com/downloads">git-scm downloads page</a> and download the newest version of Git. When you open up the downloaded installer, the program will walk you through the set up, which is a quick process.</p>
         <p>You can put in some configurations now - these will be added to every project you start on your computer. Open up your Terminal and run:
         	<div class="example">
         	git config --global user.name "your name"
@@ -81,7 +81,7 @@ You may receive a security warning about the software being from an unknown publ
         <div class="example">
         	git config --global user.email "your email address"
         </div>
-        <p>You're ready to start working with git on your computer! One last thing, though - you'll want to <a href="#key">set up a SSH key</a> on your computer and add that to your GitHub account. That way you can push and pull projects between your computer and GitHub with ease.</p>
+        <p>You're ready to start working with Git on your computer! One last thing, though - you'll want to <a href="#key">set up a SSH key</a> on your computer and add that to your GitHub account. That way you can push and pull projects between your computer and GitHub with ease.</p>
 
     <h3 id="other">Install Git on Other Platforms</h3>
     <p>So you're not using Windows or Mac? We're impressed! Try <a href="https://git-scm.com/download/">git-scm/downloads</a> for your OS and follow instructions from there.</p>    
@@ -124,7 +124,7 @@ Move into that folder:
   <div class="example">
     git clone git@github.com:<span class="note">yourgithubusername</span>/gettingtoknowgit.git
   </div>
-  <div>Git will put the project into a new folder called gettingtoknowgit. You can also have git call it a different name by saying git clone <span class="note">http://thegitrepoaddress different_folder_name</span>.
+  <div>Git will put the project into a new folder called gettingtoknowgit. You can also have Git call it a different name by saying git clone <span class="note">http://thegitrepoaddress different_folder_name</span>.
 <h3>Make a change to your repository</h3>
  <p>Make a change to a file - Make any of the proposed additions below:
 <ul>
@@ -147,12 +147,12 @@ To commit your changes - remember that it's a two step process:
  <div class="example">
  git remote -v
  </div>
- <p>You should see the git address for your repository. You can push to multiple locations. The default one is called "origin". So to push your repository back up to your GitHub account:
+ <p>You should see the Git address for your repository. You can push to multiple locations. The default one is called "origin". So to push your repository back up to your GitHub account:
  <div class="example">
 git push master origin
  </div>  
 <h3>What else?</h3>
-<p>You now know some basics of working with git! It'll be easier to learn from here. You may want to practice with branches and merging. See our <a href="resources.html">resources page</a> for further tutorials and help.</p>
+<p>You now know some basics of working with Git! It'll be easier to learn from here. You may want to practice with branches and merging. See our <a href="resources.html">resources page</a> for further tutorials and help.</p>
     </div>  
 </body>
 </html>		
