--- a/git_with_gui.html
+++ b/git_with_gui.html
@@ -19,7 +19,7 @@
 		<p>
          <h2 id="install">Install a Git GUI Tool</h2>
          <h3>Mac</h3>
-          <p>If you're on a mac and want to work on a GUI, you'll have several options (<a href="http://git-scm.com/download/gui/mac">see a git GUIs for mac</a> on the official git site), but to get you started, the GitHub GUI client is quick and easy, and works for the purpose of this class.</p>
+          <p>If you're on a mac and want to work on a GUI, you'll have several options (<a href="http://git-scm.com/download/gui/mac">see a Git GUIs for mac</a> on the official Git site), but to get you started, the GitHub GUI client is quick and easy, and works for the purpose of this class.</p>
           <p>To install the GitHub Mac GUI, <a href="https://mac.github.com/">download the GUI from the  GitHub site</a>. Once you open up the tool, it will ask for your GitHub user name and password. It's pretty self-explanatory, but you can <a href="https://mac.github.com/help.html">look to the help guide</a> for more instructions if needed. 
 	 <h3>PC</h3>
           <p>There are <a href="http://git-scm.com/downloads/guis">several Windows-based GUIs</a> available if you use a PC.  For the purpose of this class, you might want to start with the GitHub for Windows GUI.  Before you download the GUI, you might want to <a href="http://www.github.com/join">register for a GitHub account</a>.</p>
@@ -52,7 +52,7 @@
 <p>Make sure the change(s) you have made to the files in the repository have been saved to your computer. Go back to the GitHub application and you should see the changes you've made. Add a note in the "summary" field and hit the "Commit to master" button. Now when you go to the "History" view you'll see your commit in addition to the first commits we made before you forked the repository. </p>
 <p>To push your changes to your repository on GitHub, hit the sync button (top right side). When you go to GitHub through your browser, you'll now see the changes you made on your local computer</p>
 <h3>What else?</h3>
-<p>You now know some basics of working with git! It'll be easier to learn from here. You may want to practice with branches and merging. See our <a href="resources.html">resources page</a> for further tutorials and help.</p>
+<p>You now know some basics of working with Git! It'll be easier to learn from here. You may want to practice with branches and merging. See our <a href="resources.html">resources page</a> for further tutorials and help.</p>
 	</div>
 </body>
 </html>	
