--- a/resources.html
+++ b/resources.html
@@ -13,7 +13,7 @@
 		<div id="nav">< <a href="index.html">Back to Getting to Know Git for ALA: Home</a></div>
 		<h1 id="header">Resources to continue working with Git</h1>
 		<div id="main">
-
+          
  
           <h3>More about Git</h3>
          <ul>
@@ -23,10 +23,10 @@
           </ul> 
         <h3>Practice Git</h3>
         	<ul>
-        		<li><a href="https://try.github.io/levels/1/challenges/1">Practice git commands on a command-line like interface</a> </li>
+        		<li><a href="https://try.github.io/levels/1/challenges/1">Practice Git commands on a command-line like interface</a> </li>
         		<li><a href="https://help.github.com/categories/54/articles">GitHub Bootcamp</a></li>
 
-            <li><a href="https://confluence.atlassian.com/display/STASH/Basic+Git+commands">Basic git commands</a>
+            <li><a href="https://confluence.atlassian.com/display/STASH/Basic+Git+commands">Basic Git commands</a>
         	</ul>		
 
         <h3>GitHub</h3>
@@ -44,7 +44,19 @@
           <h3>Other helpful things</h3>
           <ul>
           <li><a href="https://pages.github.com/">Git Hub Pages: Quick websites</a></li>
-          </ul>        
+          </ul>     
+
+        <h3>Contact Us</h3>
+        <p>Have a question about git? We will try to help you:</p>
+        <p>
+        Kate Bronstad<br/>
+        kate.bronstad@tufts.edu</br>
+        twitter: @katebron</br>
+      </p>
+        <p>Heather Klish</br>
+        heather.klish@tufts.edu<br/>
+        twitter: @heatherklish
+        </p>   
 
 </div>	
 
