--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 		<h1 id="header">Getting to Know Git: A Guide for the ALA Class</h1>
 		<div id="main">
 		<p>This is a resource guide for the upcoming ALA session, "Getting to Know git". 
-			In this class we will talk about what git is, why you should use it, and give
-			you a brief lesson on how to work with git. </p>
+			In this class we will talk about what Git is, why you should use it, and give
+			you a brief lesson on how to work with Git. </p>
 
-			<p>We will save the last half hour to have people investigate git (and GitHub), 
+			<p>We will save the last half hour to have people investigate Git (and GitHub), 
 			with different steps depending on whether you want to use command-line or not (command-line is
 			strongly encouraged but not necessary).</p>
 
 			<p>Feel free to follow any of these steps before class!</p>
 
 		<ul>
-			<li>Set yourself up with GitHub - see instructions below</a><span class="note"> (btw, you don't need to use GitHub to use git, but it does give you a lot of benefits).</span></li>
+			<li>Set yourself up with GitHub - see instructions below</a><span class="note"> (btw, you don't need to use GitHub to use Git, but it does give you a lot of benefits).</span></li>
 			<li><a href="git_with_gui.html">Use Git with a GUI</a> (meaning, <em>without</em> the command-line)</li>
 			<li><a href="git_with_commandline.html">Use Git with the command-line</a></li>
 			<li><a href="resources.html">Resources for learning more about Git<a></li>
@@ -41,7 +41,7 @@
          					<li><a href="https://github.com/hklish01/gettingtoknowgit/tree/gh-pages">The code for this webpage</a>
          			    </ul>
          			  </ol> 
-              <p>The next step involves working with git on your own computer. You have two options:<ol><li><a href="git_with_commandline.html">Work on the command-line</a> <span class="note">(do it!)</span></li> <li><a href="git_with_gui.html">Work with a GUI tool</a> (use your mouse)</li>. </p>
+              <p>The next step involves working with Git on your own computer. You have two options:<ol><li><a href="git_with_commandline.html">Work on the command-line</a> <span class="note">(do it!)</span></li> <li><a href="git_with_gui.html">Work with a GUI tool</a> (use your mouse)</li>. </p>
 
 
 		</div>	
