--- a/resources.html
+++ b/resources.html
@@ -14,7 +14,7 @@
 		<h1 id="header">Resources to continue working with Git</h1>
 		<div id="main">
           
- 
+        <a href ="#class">Contact info and slides</a>
           <h3>More about Git</h3>
          <ul>
           
@@ -46,7 +46,8 @@
           <li><a href="https://pages.github.com/">Git Hub Pages: Quick websites</a></li>
           </ul>     
 
-        <h3>Contact Us</h3>
+        <h3 id="class">Contact Us</h3>
+        <a href="https://docs.google.com/presentation/d/1HlLd6Sf-ylMv4j8znBSpskA_5ud2J_sWFzWsn3eS8pg/edit?usp=sharing">Slides from class</a>
         <p>Have a question about git? We will try to help you:</p>
         <p>
         Kate Bronstad<br/>
