add in google slides to first page

--- a/index.html
+++ b/index.html
@@ -12,16 +12,20 @@
 		<div id="nav"> <a href="index.html">Getting to Know Git for ALA: Home</a></div>
 		<h1 id="header">Getting to Know Git: A Guide for the ALA Class</h1>
 		<div id="main">
-		<p>This is a resource guide for the upcoming ALA session, "Getting to Know git". 
-			In this class we will talk about what Git is, why you should use it, and give
-			you a brief lesson on how to work with Git. </p>
+		<p>This is a resource guide for the 2015 ALA session, "Getting to Know git". 
+			In this class we talked about what Git is, why you should use it, and gave a brief lesson on how to work with Git. </p>
 
-			<p>We will save the last half hour to have people investigate Git (and GitHub), 
+			<p><a href="https://docs.google.com/presentation/d/1HlLd6Sf-ylMv4j8znBSpskA_5ud2J_sWFzWsn3eS8pg/edit?usp=sharing">See the slides from this class</a></p>
+
+            <h2>
+			<!--<p>We will save the last half hour to have people investigate Git (and GitHub), 
 			with different steps depending on whether you want to use command-line or not (command-line is
-			strongly encouraged but not necessary).</p>
+			strongly encouraged but not necessary).</p>-->
 
-			<p>Feel free to follow any of these steps before class!</p>
-
+			<h2>Initial Steps</h2>
+           <p>We will save the last half hour to have people investigate Git (and GitHub), 
+			with different steps depending on whether you want to use command-line or not (command-line is
+			strongly encouraged but not necessary).</p
 		<ul>
 			<li>Set yourself up with GitHub - see instructions below</a><span class="note"> (btw, you don't need to use GitHub to use Git, but it does give you a lot of benefits).</span></li>
 			<li><a href="git_with_gui.html">Use Git with a GUI</a> (meaning, <em>without</em> the command-line)</li>
