rework for LITA online class

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<title>Getting to Know Git</title>
+<title>Beginning Git and GitHub</title>
 
 <head>
 	<link href="gtk_style/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
@@ -9,30 +9,35 @@
       -->
 	</head>
 	<body>
-		<div id="nav"> <a href="index.html">Getting to Know Git for ALA: Home</a></div>
-		<h1 id="header">Getting to Know Git: A Guide for the ALA Class</h1>
+		<div id="nav"> <a href="index.html">Beginning Git and GitHub</a></div>
+		<h1 id="header">A Guide for the LITA class</h1>
 		<div id="main">
-		<p>This is a resource guide for the 2015 ALA session, "Getting to Know git". 
-			In this class we talked about what Git is, why you should use it, and gave a brief lesson on how to work with Git. </p>
+		<p>This is a resource guide for the 2017 LITA class, "Beginning Git & GitHub". 
+			</p>
 
-			<p><a href="https://docs.google.com/presentation/d/1HlLd6Sf-ylMv4j8znBSpskA_5ud2J_sWFzWsn3eS8pg/edit?usp=sharing">See the slides from this class</a></p>
+			<!--<p><a href="https://docs.google.com/presentation/d/1HlLd6Sf-ylMv4j8znBSpskA_5ud2J_sWFzWsn3eS8pg/edit?usp=sharing">See the slides from this class</a></p>-->
 
             <h2>
 			<!--<p>We will save the last half hour to have people investigate Git (and GitHub), 
 			with different steps depending on whether you want to use command-line or not (command-line is
 			strongly encouraged but not necessary).</p>-->
 
-			<h2>Initial Steps</h2>
-           <p>We will save the last half hour to have people investigate Git (and GitHub), 
-			with different steps depending on whether you want to use command-line or not (command-line is
-			strongly encouraged but not necessary).</p
+			<h2>First Class</h2>
+           
 		<ul>
-			<li>Set yourself up with GitHub - see instructions below</a><span class="note"> (btw, you don't need to use GitHub to use Git, but it does give you a lot of benefits).</span></li>
-			<li><a href="git_with_gui.html">Use Git with a GUI</a> (meaning, <em>without</em> the command-line)</li>
-			<li><a href="git_with_commandline.html">Use Git with the command-line</a></li>
+			<!--<li>Set yourself up with GitHub - see instructions below</a><span class="note"> (btw, you don't need to use GitHub to use Git, but it does give you a lot of benefits).</span></li>-->
+			<!--<li><a href="git_with_gui.html">Use Git with a GUI</a> (meaning, <em>without</em> the command-line)</li>-->
+			<li><a href="install_git.html">Install Git</a></li>
+        </ul>
+        <h2>More about the class</h2>
+        <ul>
+
+             
 			<li><a href="resources.html">Resources for learning more about Git<a></li>
+			<li><a href="resources.html#class">Contact us<a></li>
+			<li><a href="http://ecourses.ala.org/course/view.php?id=506">Class page in Moodle</a></li>
 		</ul>
-         <div id="gh-login">
+       <!--  <div id="gh-login">
          	<h2>GitHub</h2>
          	<p>You'll probably want to use GitHub as a space to view and store your own projects and view other people's. </p>
          		<ol>
@@ -48,7 +53,7 @@
               <p>The next step involves working with Git on your own computer. You have two options:<ol><li><a href="git_with_commandline.html">Work on the command-line</a> <span class="note">(do it!)</span></li> <li><a href="git_with_gui.html">Work with a GUI tool</a> (use your mouse)</li>. </p>
 
 
-		</div>	
+		</div>	-->
 
 </body>
 </html>		
