--- a/resources.html
+++ b/resources.html
@@ -1,6 +1,6 @@
 
 <html>
-<title>Getting to Know Git: GUI</title>
+<title>Beginning Git & GitHub</title>
 
 <head>
 	<link href="gtk_style/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
@@ -10,11 +10,11 @@
       -->
 	</head>
 	<body>
-		<div id="nav">< <a href="index.html">Back to Getting to Know Git for ALA: Home</a></div>
+		<div id="nav">< <a href="index.html">Back to "Beginning Git & GitHub": Home</a></div>
 		<h1 id="header">Resources to continue working with Git</h1>
 		<div id="main">
           
-        <a href ="#class">Contact info and slides</a>
+        <a href ="#class">Contact info</a>
           <h3>More about Git</h3>
          <ul>
           
@@ -47,12 +47,13 @@
           </ul>     
 
         <h3 id="class">Contact Us</h3>
-        <a href="https://docs.google.com/presentation/d/1HlLd6Sf-ylMv4j8znBSpskA_5ud2J_sWFzWsn3eS8pg/edit?usp=sharing">Slides from class</a>
+       <!-- <a href="https://docs.google.com/presentation/d/1HlLd6Sf-ylMv4j8znBSpskA_5ud2J_sWFzWsn3eS8pg/edit?usp=sharing">Slides from class</a>-->
+
         <p>Have a question about git? We will try to help you:</p>
         <p>
         Kate Bronstad<br/>
         kate.bronstad@tufts.edu</br>
-        twitter: @katebron</br>
+       </br>
       </p>
         <p>Heather Klish</br>
         heather.klish@tufts.edu<br/>
