make headings less redundant

--- a/install_git.html
+++ b/install_git.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<div id="nav">< <a href="index.html">Back to "Beginning Git & GitHub": Home</a></div>
-		<h1 id="header">Install Git</h1>
+		<h1 id="header">Installation</h1>
 		<div id="main">
 			<!--<ol>
 				<li>Install Git</li>
@@ -18,7 +18,7 @@
 				<li><a href="#practice">Practice with Git and GitHub</a></li>
 			</ol>-->
 
-		<h2 id="install">Install Git</h2>
+		<h2 id="install">Choose the instructions based on your computer</h2>
 		<ul>
 			<li><a href="#pc">Install on Windows</a></li>
 			<li><a href="#mac">Install on a Mac</li>
