add vim cheat sheet

--- a/resources.html
+++ b/resources.html
@@ -27,6 +27,7 @@
         		<li><a href="https://help.github.com/categories/54/articles">GitHub Bootcamp</a></li>
 
             <li><a href="https://confluence.atlassian.com/display/STASH/Basic+Git+commands">Basic Git commands</a>
+            <li><a href="https://services.github.com/on-demand/downloads/github-git-cheat-sheet.pdf">Git command cheat sheet from GitHub</a></li>
         	</ul>		
 
         <h3>GitHub</h3>
@@ -38,7 +39,9 @@
 
         <h3>Help with Command-line</h3>
           <ul>
-            <li><a href="http://cli.learncodethehardway.org/book/">Command line crash course</a></li>
+          <li><a href="https://vim.rtorr.com/">Vim cheat sheet</a></li>
+           <li><a href="https://tutorial.djangogirls.org/en/intro_to_command_line/">Django Girls tutorial on command line</a></li>
+            <li><a href="https://www.udemy.com/linux-command-line-volume1/">Free Udemy course on command line</a></li>
           </ul>
 
           <h3>Other helpful things</h3>
