add link to common commands

--- a/resources.html
+++ b/resources.html
@@ -39,6 +39,7 @@
 
         <h3>Help with Command-line</h3>
           <ul>
+          <li><a href="https://www.codecademy.com/articles/command-line-commands">A list of common commands from Codecademy</a></li>
           <li><a href="https://vim.rtorr.com/">Vim cheat sheet</a></li>
            <li><a href="https://tutorial.djangogirls.org/en/intro_to_command_line/">Django Girls tutorial on command line</a></li>
             <li><a href="https://www.udemy.com/linux-command-line-volume1/">Free Udemy course on command line</a></li>
