add link, clean up semantics

--- a/class2_practice.html
+++ b/class2_practice.html
@@ -31,18 +31,18 @@
 
 <h3>Undo changes</h3>
 <ol>
-<li>Make a change. Don't add or commit it yet, but reset to the previous commit</li>
-<li>Check to verify the change is gone</li>
-<li>Make another change, and commit it this time.</li>
-<li>Reset the project back to the next most recent commit</li>
-<li>Verify the state of your project (in other words, the file and/or directories you changed) is back to the earlier commit.</li>
+<li>make a change. Don't add or commit it yet, but reset to the previous commit</li>
+<li>check to verify the change is gone</li>
+<li>make another change, and commit it this time.</li>
+<li>reset the project back to the next most recent commit</li>
+<li>verify the state of your project (in other words, the file and/or directories you changed) is back to the earlier commit.</li>
 </ol>
 
 
-<h3>Need Help?</h3>
+<h2>Need Help?</h2>
 See <a href="resources.html">resources</a>, or go back to Moodle to <a href="http://ecourses.ala.org/course/view.php?id=506">post to the forum, email us, or visit office hours</a>. Or, of course, google it.
 
-<h3>That was too easy. I want to do more</h3>
+<h2>That was too easy. I want to do more</h2>
 <p>
 Create a .gitignore file that ignores images (or a directory of your choice).
 Test that it's working by adding an image (or something to an ignored directory) and then running git status. If it works, git should not notice a change.
