--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
 			<!--<li><a href="git_with_gui.html">Use Git with a GUI</a> (meaning, <em>without</em> the command-line)</li>-->
 			<li><a href="install_git.html">Install Git</a></li>
         </ul>
+
+        <h2>Second class</h2>
+        <ul>
+        <li><a href="class2_practice.html">Practice git commands</a></li>
+        </ul>
         <h2>More about the class</h2>
         <ul>
 
