change to and/or

--- a/class2_practice.html
+++ b/class2_practice.html
@@ -25,7 +25,7 @@
 <li> initialize a git repository
 <li> make a new document</li>
 <li> commit the new document</li>
-<li> Add a new document, and or create a change to the existing document</li>
+<li> Add a new document, and/or create a change to the existing document</li>
 <li> Make a new commit</li>
 </ol>
 
