consolidate first bullets

--- a/class2_practice.html
+++ b/class2_practice.html
@@ -1,4 +1,4 @@
-<html>
+l<html>
 <title>Beginning Git & GitHub: class 2 practice</title>
 
 <head>
@@ -18,8 +18,6 @@
 <h2 id="practice">Practice Git</h2>
 <h3>Set up a new repository and practice committing</h3>
 <ol>
-<li>
-<p>First, practice navigating the command line by:
 <li> make a new folder</li>
 <li> navigate into the folder</li>
 <li> initialize a git repository
