change key title

--- a/set_up_keys.html
+++ b/set_up_keys.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<div id="nav">< <a href="index.html">Back to "Beginning Git & GitHub": Home</a></div>
-		<h1 id="header">Create SSH key & put copy in your GitHub account</h1>
+		<h1 id="header">Put an SSH key in GitHub</h1>
 		<div id="main">
 		
 	
