add links for class 3

--- a/resources.html
+++ b/resources.html
@@ -33,6 +33,7 @@
         <h3>GitHub</h3>
         <ul>
           <li><a href="https://help.github.com">GitHub Help</a></li>
+          <li><a href="https://guides.github.com/features/mastering-markdown/">Markdown guide</a>
         
 
         </ul>
