--- a/index.html
+++ b/index.html
@@ -33,9 +33,16 @@
         <h2>Second class</h2>
         <ul>
         <li><a href="class2_practice.html">Practice git commands</a></li>
+        <li><a href="class2_answers.html">Solutions for git commands</a></li>
         </ul>
+
+        <h2>Third class</h2>
+
         <h2>More about the class</h2>
-        <ul>
+         <ul>
+        <li><a href="set_up_keys.html">Create SSH key and put on GitHub</a></li>
+        <li><a href="class3.html">Practice GitHub: instructions</a></li>
+        </ul>
 
              
 			<li><a href="resources.html">Resources for learning more about Git<a></li>
