include note about committing .gitignore

--- a/class2_answers.html
+++ b/class2_answers.html
@@ -83,7 +83,7 @@ OR<br/>
 
 <h2>Advanced .gitignore excersise</h2>
 <p>
-<strong>Challenge:</strong> Create a .gitignore file that ignores images (or a directory of your choice).
+<strong>Challenge:</strong> Create a .gitignore file that ignores images (or a directory of your choice). Commit it to your repository.
 Test that it's working by adding an image (or something to an ignored directory) and then running git status. If it works, git should not notice a change.
 </p>
 
@@ -102,6 +102,8 @@ Alternatively, if you're able to have flexibility in organizing the project file
 <div class="example">
 <strong>/images</strong>
 </div>
+<p>Make sure you commit the .gitignore file before you test whether it works by adding an image.</p>
+
 <p>Here are some resources for the times you have to deal with files that you'd like git to ignore but they are already tracked, but you want them out of project history:
 <ul>
 <li>
