--- a/class4.html
+++ b/class4.html
@@ -18,7 +18,7 @@
 
 
 <h3>Dealing with a merge conflict</h3>
-<p>I've set up the Moby Dick project on GitHub. It has two branches, and I have set up the files that they will give you a merge conflict when you try to merge them to give you practice. Try to clone and bring down the additional branch on your own, but if you need help, see the instructions below:</p>
+<p>I've set up the Moby Dick project on GitHub. It has two branches, and I have set up the files that they will give you a merge conflict when you try to merge them to give you practice. </p>
 
 <h4>Bring down the branches</h4>
 <ol>
