--- a/class4.html
+++ b/class4.html
@@ -18,24 +18,24 @@
 
 
 <h3>Dealing with a merge conflict</h3>
-<p>I've set up the Moby Dick project on GitHub. It has two branches, and I have set up the files that they will give you a merge conflict when you try to merge them to give you practice. </p>
+<p>I've set up a very basic website project on GitHub. It has two branches, and I have set up the files that they will give you a merge conflict when you try to merge them to give you practice. </p>
 
 <h4>Bring down the branches</h4>
 <ol>
-<li>Clone this repository: <a href="https://github.com/katebron/Moby_dick">https://github.com/katebron/Moby_dick</a></li>
+<li>Clone this repository: <a href="https://github.com/katebron/class_merge_demo">https://github.com/katebron/class_merge_demo</a></li>
 <li>Run git branch -a to see all the branches</li>
 <li>To automatically set up a new branch and pull my additional GitHub branch into it, run</li>
 <div class="example">
-git checkout another_moby
+git checkout change_index
 </div>
 <li>Run git diff to see the differences betwen the two branches</li>
 </ol>
 
 <h4>Merge the branches</h3>
-<p>In this exercise, I'd like you to merge another_moby into master. Try to do this part on your own - feel free to Google. I will have 'solutions' next week.
+<p>In this exercise, I'd like you to merge the change_index branchinto master. Try to do this part on your own - feel free to Google. I will have 'solutions' next week.
 <ul>
 <li>Move to master</li>
-<li>Merge another_moby into master</li>
+<li>Merge change_index into master</li>
 <li>Deal with the merge conflict</li>
 </ul>
 
