--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
         <li><a href="set_up_keys.html">Create SSH key and put on GitHub</a></li>
         <li><a href="class3.html">Practice GitHub: instructions</a></li>
         </ul>
+         <h2>Fourth Class</h2>
+         <ul>
+        
+        <li><a href="class4.html">Branching and merging practice</a></li>
+        <li><a href="class4.html#read">Readings</a></li>
+        </ul>
 
         <h2>More about the class</h2>
        <ul>      
