--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
         <li><a href="class4.html#read">Readings</a></li>
         </ul>
 
+         <h2>Fifth Class</h2>
+         <ul>
+         <li><a href="class5.html">Final project</a></li>
+         </ul>
+       
+
         <h2>More about the class</h2>
        <ul>      
 			<li><a href="resources.html">Resources for learning more about Git<a></li>
